--- a/css/main.css
+++ b/css/main.css
@@ -79,42 +79,63 @@ main {
     margin-top: 100px;
 }
 
+.intro {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+}
+
 .intro h1 {
     font-size: 40px;
     text-align: left;
     margin-left: 100px;
     margin-bottom: 10px;
     font-weight: 700;
+    flex-wrap: wrap;
 }
 
 .intro p {
-    width: 700px;
-    height: 100px;
+    max-width: 700px;
+    height: auto;
     font-size: 20px;
     text-align: left;
     margin-left: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     line-height: 1.3;
     text-indent: 4ch;
     font-weight: 200;
     font-style: italic;
+    flex-wrap: wrap;
+
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 3;
+    flex-wrap: wrap;
 }
 
 .buttons nav ul {
     list-style-type: none;
     margin-left: 200px;
     align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .buttons nav ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 50px;
     margin-left: 20px;
     font-size: 20px;
+    padding: 20px;
 }
 
 .btn {
-
+    height: auto;
     background-color: rgba(121, 80, 242, 0.4);
     color: #462155;
     font-family: inherit;
@@ -142,21 +163,21 @@ main {
 }
 
 .animation {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     right: 0;
     width: 40vw;
     height: auto;
     overflow: hidden;
-    z-index: 5;
+    z-index: 1;
     pointer-events: none;
 }
 
 .animation img {
     width: 100%;
     height: auto;
-    transform-origin: bottom center;
-    animation: wiggle 6s ease-in-out infinite;
+    transform-origin: center;
+    animation: wiggle 10s linear infinite;
 }
 
 @keyframes wiggle {
@@ -165,4 +186,31 @@ main {
     50% { transform: rotate(0deg); }
     75% { transform: rotate(5deg); }
     100% { transform: rotate(0deg); }
+}
+
+@media (max-width: 768px) {
+    .intro {
+        padding: 20px;
+    }
+
+    .intro p {
+        font-size: 16px;
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .intro h1 {
+        font-size: 28px;
+        margin-left: 0;
+    }
+
+    .buttons nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 0;
+    }
+
+    .buttons nav ul li {
+        margin: 10px 0;
+    }
 }
