--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,6 @@ header {
     color: #8A2932;
     position: relative;
     flex-wrap: wrap;
-
 }
 
 .header p {
@@ -62,14 +61,31 @@ header {
 }
 
 .header nav ul li a {
+    position: relative;
     text-decoration: none;
     color: inherit;
+    transform: 0.3s linear;
+}
+
+.header nav ul li a::before {
+    position: absolute;
+    content: "";
+    bottom: -3px;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    background-color: #1E998E;
+    transition: 0.2s linear;
 }
 
 .header nav ul li a:hover {
-    color: #C67339;
-    text-decoration: underline;
+    color: #1E998E;
+    font-weight: bold;
     cursor: pointer;
+}
+
+.header nav ul li a:hover::before {
+    width: 100%;
 }
 
 .custom-shape-divider-top-1746567817 {
@@ -189,7 +205,7 @@ main {
 }
 
 .animation {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     width: 40vw;
@@ -200,7 +216,7 @@ main {
 }
 .animation img {
     width: 100%;
-    height: auto;
+    height: 100%;
     transform-origin: center;
     animation: wiggle 10s linear infinite;
 }
@@ -216,6 +232,5 @@ main {
 footer {
     font-size: 10px;
     text-align: center;
-    margin-top: auto ;
     color: rgba(184, 181, 181, 0.6);
 }
