--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,21 @@
          url("../fonts/SpaceMono-BoldItalic.ttf");
 }
 
+:root {
+    --bg-color: #cde7ff;
+    --switch-width: 60px;
+    --switch-height:30px;
+    --switch-round: 50px;
+    --switch-padding-x: 5px;
+    --switch-bg: linear-gradient(to bottom, #73bbff, #a2d1fd);
+    --switch-dark-bg: linear-gradient(to top, #2b3347, #181d27);
+    --border-width: 2px;
+    --border-gradient: linear-gradient(to bottom, #a2d1fd, #cde7ff);
+    --border-dark-gradient: linear-gradient(to bottom, #000000, #6c7384);
+    --sunmoon-size: 20px;
+    --transition: all 0.5s ease;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -24,6 +39,226 @@ main {
 body {
     background-color: #f0f8ff;
     font-family: "Space Mono", monospace;
+    transition: all 0.5s ease;
+}
+
+body.dark {
+    background-color: #1E1E1E;
+    color: #D4D4D4;
+    transition: all 0.5s ease;
+}
+
+body.dark .header p {
+    background-color: transparent;
+    color: #000000;
+}
+
+body.dark .header nav {
+    background-color: transparent;
+    color: #777272;
+}
+
+body.dark .header nav ul li a::before {
+    background-color: #777474;
+    transition: 0.2s linear;
+}
+
+body.dark .header nav ul li a:hover {
+    color: #777474;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+body.dark .header nav ul li a:hover::before {
+    width: 100%;
+}
+
+body.dark .custom-shape-divider-top-1746567817 .shape-fill {
+    fill: #D4D4D4;
+}
+
+body.dark .education-grid h2,
+body.dark .education-item a,
+body.dark .education-item p,
+body.dark .interests-grid-item .interests,
+body.dark .interests-grid-item h2,
+body.dark .language-grid-item h2,
+body.dark .language-grid-item .language,
+body.dark .socials h3 {
+    color: #D4D4D4;
+}
+
+body.dark .profile-pic {
+    box-shadow: 0px 0px 1px 10px #D4D4D4;
+}
+
+body.dark .education-item a:hover {
+    color: #EFC8CB;
+    cursor: pointer;
+}
+
+.switch {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: var(--switch-width);
+    height: var(--switch-height);
+    border-radius: var(--switch-round);
+    cursor: pointer;
+    transition: var(--transition);
+    background: var(--switch-bg);
+}
+
+.switch::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--switch-round);
+    opacity: 0;
+    background: var(--switch-dark-bg);
+    transition: var(--transition);
+}
+
+body.dark .switch::before {
+    opacity: 1;
+}
+
+.switch .border {
+    position: absolute;
+    top: calc(var(--border-width) * -1);
+    left: calc(var(--border-width) * -1);
+    width: calc(100% + var(--border-width) * 2);
+    height: calc(100% + var(--border-width) * 2);
+    border-radius: var(--switch-round);
+    background: var(--border-gradient);
+    z-index: -1;
+    transition: var(--transition);
+}
+
+.switch .border::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--switch-round);
+    background: var(--border-dark-gradient);
+    opacity: 0;
+    transition: var(--transition);
+}
+
+body.dark .switch .border::after {
+    opacity: 1;
+}
+
+.switch input {
+    display: none;
+}
+
+.sunmoon {
+    position: absolute;
+    width: var(--sunmoon-size);
+    height: var(--sunmoon-size);
+    border-radius: 50%;
+    transition: var(--transition);
+    left: var(--switch-padding-x);
+    z-index: 1;
+    background-color: #FFC187;
+    box-shadow: 0px 0px 11.7px 0px #FFC187, 0px 0px 20px 0px #ffc18768, -2px -2px 5px 0px #ffab5c inset;
+}
+
+body.dark .sunmoon {
+    left: calc(100% - var(--sunmoon-size) - var(--switch-padding-x));
+    background-color: #dee5f3;
+    box-shadow: 0px 0px 51.7px 0px #dee5f3;
+}
+
+.darkside {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    background-color: #FFC187;
+    transition: var(--transition);
+}
+
+body.dark .darkside {
+    background-color: #565c6b;
+}
+
+.clouds {
+    border-radius: var(--switch-round);
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.cloud {
+    position: absolute;
+    width: 60%;
+    transition: var(--transition);
+}
+
+.cloud-1 {
+    bottom: -55%;
+    left: 0;
+}
+
+.cloud-2 {
+    bottom: -45%;
+    left: 25px;
+}
+
+.cloud-3 {
+    bottom: -40%;
+    right: 0px;
+}
+
+.cloud-4 {
+    bottom: -16%;
+    right: -25px;
+}
+
+
+body.dark .cloud-1 {
+    bottom: -35%;
+    left: -110px;
+}
+
+body.dark .cloud-2 {
+    bottom: -15%;
+    left: -110px;
+    transition: all 0.7s ease;
+}
+
+body.dark .cloud-3 {
+    bottom: -15%;
+    right: -110px;
+}
+
+body.dark .cloud-4 {
+    bottom: -5%;
+    right: -110px;
+    transition: all 0.7s ease;
+}
+
+.stars {
+    position: absolute;
+    top: 150%;
+    left: 0;
+    transform: translateY(-50%);
+    pointer-events: none;
+    transition: var(--transition);
+}
+
+body.dark .stars {
+    top: 50%;
 }
 
 header {
@@ -43,6 +278,8 @@ header {
     color: #8A2932;
     position: relative;
     flex-wrap: wrap;
+    display: flex;
+    align-items: center;
 
 }
 
@@ -145,14 +382,12 @@ header {
     gap: 3rem;
     margin: 0 120px 0;
     max-width: 100%;
-    padding: 20px 0;
 
 }
 
 .info-container h2 {
   font-size: 20px;
   margin: 0;
-  text-decoration: underline solid #EFC8CB;
 }
 
 .education-grid {
@@ -180,7 +415,7 @@ header {
 }
 
 .education-item a {
-    text-decoration: none;
+    text-decoration: underline solid #EFC8CB;;
     color: #9b9292;
     font-size: 1rem;
     margin: 0;
@@ -189,7 +424,6 @@ header {
 
 .education-item a:hover {
     color: #EFC8CB;
-    text-decoration: underline;
     cursor: pointer;
 }
 .interests-grid-item, .language-grid-item {
@@ -220,13 +454,21 @@ header {
     gap: 2rem;
     margin-top: 0;
     margin-bottom: 0;
+    width: 100%;
+    padding: 20px;
 }
 
 .socials h3 {
     margin: 0;
-    padding-bottom: 10px;
     font-size: 20px;
     color: #cfc7c8;
+    white-space: nowrap;
+}
+
+.socials a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .socials img {
