--- a/css/projects.css
+++ b/css/projects.css
@@ -1,8 +1,20 @@
 :root {
-  --primary: #FFDBE9;
-  --secondary: #FFB6C1;
-  --dark: #212121;
-  --light: #f3f3f3;
+    --primary: #FFDBE9;
+    --secondary: #FFB6C1;
+    --dark: #212121;
+    --light: #f3f3f3;
+    --bg-color: #cde7ff;
+    --switch-width: 60px;
+    --switch-height:30px;
+    --switch-round: 50px;
+    --switch-padding-x: 5px;
+    --switch-bg: linear-gradient(to bottom, #73bbff, #a2d1fd);
+    --switch-dark-bg: linear-gradient(to top, #2b3347, #181d27);
+    --border-width: 2px;
+    --border-gradient: linear-gradient(to bottom, #a2d1fd, #cde7ff);
+    --border-dark-gradient: linear-gradient(to bottom, #000000, #6c7384);
+    --sunmoon-size: 20px;
+    --transition: all 0.5s ease;
 }
 
 @font-face {
@@ -31,6 +43,244 @@ main {
 body {
     background-color: #f0f8ff;
     font-family: "Space Mono", monospace;
+    transition: all 0.5s ease;
+}
+
+body.dark {
+    background-color: #1E1E1E;
+    color: #D4D4D4;
+    transition: all 0.5s ease;
+}
+
+body.dark .header p {
+    background-color: transparent;
+    color: #000000;
+}
+
+body.dark .header nav {
+    background-color: transparent;
+    color: #777272;
+}
+
+body.dark .header nav ul li a::before {
+    background-color: #777474;
+    transition: 0.2s linear;
+}
+
+body.dark .header nav ul li a:hover {
+    color: #777474;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+body.dark .header nav ul li a:hover::before {
+    width: 100%;
+}
+
+body.dark .custom-shape-divider-top-1746567817 .shape-fill {
+    fill: #D4D4D4;
+}
+
+body.dark .description h1,
+body.dark .description p {
+    color: #D4D4D4;
+}
+
+body.dark .github :hover {
+    color: #777474;
+}
+
+body.dark .card__face {
+    box-shadow: 0px 3px 18px 3px rgba(255, 255, 255, 0.2);
+}
+
+body.dark .card__face--front {
+    background-image: linear-gradient(to bottom right, #D4D4D4, #777272);
+    transition: all 0.5s ease;
+}
+
+body.dark .card__face--front h2 {
+    color: var(--dark) ;
+}
+
+body.dark .card__face--back {
+    background-color: #D4D4D4;
+}
+
+body.dark .card__header:after {
+    background-image: linear-gradient(to bottom left, #D4D4D4 10%, #777272 115%);
+}
+
+body.dark .card__header h2 {
+    color: var(--dark);
+}
+
+body.dark .card__body p {
+    color: var(--dark);
+}
+
+.switch {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: var(--switch-width);
+    height: var(--switch-height);
+    border-radius: var(--switch-round);
+    cursor: pointer;
+    transition: var(--transition);
+    background: var(--switch-bg);
+}
+
+.switch::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--switch-round);
+    opacity: 0;
+    background: var(--switch-dark-bg);
+    transition: var(--transition);
+}
+
+body.dark .switch::before {
+    opacity: 1;
+}
+
+.switch .border {
+    position: absolute;
+    top: calc(var(--border-width) * -1);
+    left: calc(var(--border-width) * -1);
+    width: calc(100% + var(--border-width) * 2);
+    height: calc(100% + var(--border-width) * 2);
+    border-radius: var(--switch-round);
+    background: var(--border-gradient);
+    z-index: -1;
+    transition: var(--transition);
+}
+
+.switch .border::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--switch-round);
+    background: var(--border-dark-gradient);
+    opacity: 0;
+    transition: var(--transition);
+}
+
+body.dark .switch .border::after {
+    opacity: 1;
+}
+
+.switch input {
+    display: none;
+}
+
+.sunmoon {
+    position: absolute;
+    width: var(--sunmoon-size);
+    height: var(--sunmoon-size);
+    border-radius: 50%;
+    transition: var(--transition);
+    left: var(--switch-padding-x);
+    z-index: 1;
+    background-color: #FFC187;
+    box-shadow: 0px 0px 11.7px 0px #FFC187, 0px 0px 20px 0px #ffc18768, -2px -2px 5px 0px #ffab5c inset;
+}
+
+body.dark .sunmoon {
+    left: calc(100% - var(--sunmoon-size) - var(--switch-padding-x));
+    background-color: #dee5f3;
+    box-shadow: 0px 0px 51.7px 0px #dee5f3;
+}
+
+.darkside {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    background-color: #FFC187;
+    transition: var(--transition);
+}
+
+body.dark .darkside {
+    background-color: #565c6b;
+}
+
+.clouds {
+    border-radius: var(--switch-round);
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.cloud {
+    position: absolute;
+    width: 60%;
+    transition: var(--transition);
+}
+
+.cloud-1 {
+    bottom: -55%;
+    left: 0;
+}
+
+.cloud-2 {
+    bottom: -45%;
+    left: 25px;
+}
+
+.cloud-3 {
+    bottom: -40%;
+    right: 0px;
+}
+
+.cloud-4 {
+    bottom: -16%;
+    right: -25px;
+}
+
+
+body.dark .cloud-1 {
+    bottom: -35%;
+    left: -110px;
+}
+
+body.dark .cloud-2 {
+    bottom: -15%;
+    left: -110px;
+    transition: all 0.7s ease;
+}
+
+body.dark .cloud-3 {
+    bottom: -15%;
+    right: -110px;
+}
+
+body.dark .cloud-4 {
+    bottom: -5%;
+    right: -110px;
+    transition: all 0.7s ease;
+}
+
+.stars {
+    position: absolute;
+    top: 150%;
+    left: 0;
+    transform: translateY(-50%);
+    pointer-events: none;
+    transition: var(--transition);
+}
+
+body.dark .stars {
+    top: 50%;
 }
 
 header {
@@ -40,11 +290,18 @@ header {
     padding: 10px;
 }
 
+.header {
+    font-size: 20px;
+    position: relative;
+    z-index: 4;
+}
+
 .header nav {
     color: #8A2932;
     position: relative;
     flex-wrap: wrap;
-
+    display: flex;
+    align-items: center;
 }
 
 .header p {
@@ -180,6 +437,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s ease;
 }
 
 .card__face--front h2 {
@@ -225,13 +483,6 @@ header {
 
 .card__body {
     padding: 30px;
-}
-
-.card__body h3 {
-    color: var(--dark);
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 15px;
 }
 
 .card__body p {
