--- a/css/about.css
+++ b/css/about.css
@@ -412,7 +412,7 @@ header {
     color: #9b9292;
     font-size: 1rem;
     margin: 0;
-    max-width: 600px;
+    max-width: 700px;
 }
 
 .education-item a {
@@ -456,6 +456,7 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     width: 100%;
+    padding-top: 40px;
 }
 
 .socials h3 {
